2001-07-16  Dan Mueth  <d-mueth@uchicago.edu>

	Copied the FAQ into these pages so we can have a nicer and
	more uniform appearance.  In the future, make sure to run
	tidy first, since this is pretty ugly.

	* charter.html:
	* elections.html:
	* faq-ln7.html:
	* faq.html:
	* index.html:
	* membership-form.html:
	* membership-policy.html:

2001-07-13  Dan Mueth  <d-mueth@uchicago.edu>

	Updating the various pages so they have a common style and
	set of links.  Before you couldn't navigate from any of them
	to the main page or to www.gnome.org or to each other.  Now
	you can :)

	* charter.html:
	* elections.html:
	* index.html:
	* membership-form.html:
	* membership-policy.html:

2001-07-13  Dan Mueth  <d-mueth@uchicago.edu>

	Testing scripts...... 

2001-07-13  Dan Mueth  <d-mueth@uchicago.edu>

	Removing underscores and replacing with <em> because some
	people were complaining lots of things look like links but aren't.

	* index.html:

2001-07-13  Dan Mueth  <d-mueth@uchicago.edu>

	I now have membership-list.html generated which is the current
	membership list, while membership.html is the original list
	at the time of the first elections.  I clarified this and
	updated the links.

	* elections.html:
	* index.html:

2001-07-12  Dan Mueth  <d-mueth@uchicago.edu>

	Small improvements to appearance of page which pops up
	to confirm application is received.
	* cgi-bin/membership-form-handler.cgi:

	Fixed path for script which I forgot to do last time.
	* membership-form.html:

2001-07-12  Dan Mueth  <d-mueth@uchicago.edu>

	Updating main page in various places.  Fixed formatting 
        and HTML.  Added membership information and application links.
	* index.html:

	Changed background color to white.
	* membership-form.html:

	Adding this file by Russell.
	* membership-policy.html:

	Removing old versions of the script
	* membership-form-handler.pl:
	* cgi-bin/membership-form-handler.pl:

2001-07-12  Dan Mueth  <d-mueth@uchicago.edu>
