@@ -35,41 +35,42 @@
      <td>
 
 <br>
-<h2 align="center">Election-related materials</h2>
+<h2 align="center">Elections</h2>
 
+<p>
+The GNOME Foundation Membership elects the Board of Directors each
+November.  Any member can nominate themself to run in the election.
+The overall election process is overseen by the Membership and Elections
+Committee, which can be reached at membership@gnome.org. 
+</p>
+
+<B>Election Materials from 2000 Election:</B>
 <UL>
   <LI>
-  Full election results are <A href="/electionresults.html">here</A>.
-  <LI><SPAN style="font-weight: medium">The full announcement is <A href="http://mail.gnome.org/archives/foundation-announce/2000-November/msg00002.html">here</A>.</SPAN>
-  
-  <LI><SPAN style="font-weight: medium"><A href="http://mail.gnome.org/archives/vote/2000-November/thread.html">Here</A> is the archive of all the votes.</SPAN>
-  
-  <LI><SPAN style="font-weight: medium">If you'd like to run the election results
-  script for yourself, read </SPAN><A href="http://condor.nj.org/~steintr/verify.html"><SPAN style="font-weight: medium">this information.</SPAN></A>
-  
-  <LI><A href="/vote-counter.py"><SPAN style="font-weight: medium">Here</SPAN></A> is the vote counter script.
-  <LI><SPAN style="font-weight: medium">The final list of people who were registered
-  to vote in these elections is </SPAN><A href="/final_membership_list.txt"><SPAN style="font-weight: medium">here</SPAN></A><SPAN style="font-weight: medium">.</SPAN>
-  
+   <A href="http://mail.gnome.org/archives/foundation-announce/2000-November/msg00002.html">Election results announcement.</A>
+  </LI>
+  <LI>
+   <A href="electionresults.html">Detailed election results.</A>
+  </LI>
+  <LI>
+   <A href="http://mail.gnome.org/archives/vote/2000-November/thread.html">Archive of all votes.</A>
+  </LI>
+  <LI>
+   <A href="http://condor.nj.org/~steintr/verify.html">Instructions</A> for
+   running the <A href="vote-counter.py">vote counting script</A>.
+  </LI>
+  <LI>
+   <!-- <A href="final_membership_list.txt">List of registered voters.</A> -->
+   <A href="membership.html">List of registered voters.</A>
+  </LI>
+  <LI>
+   <A href="ballot-summary.html">List of candidates for Board of Directors</A>
+  </LI>
+  <LI>
+   <A href="electionrules.html">Election rules and procedures</A>
+  </LI>
 </UL>
-<P><BR>
-<B>Archive of older election-related materials:</B></P>
-<UL>
-  <LI>
-  <P style="margin-bottom: 0in"><A href="/ballot-summary.html"><SPAN style="font-weight: medium">Here</SPAN></A><SPAN style="font-weight: medium"> is the list of all the candidates for election
-  to the Board of Directors of the Foundation.
-  </SPAN></P>
-  
-  <LI><A href="http://www.gnome.org/faqs/gnome-foundation-faq"><SPAN style="font-weight: medium">Frequently Asked Questions</SPAN></A>
-  
-  
-  <LI>The list of all <A href="membership.html">registered members</A>
-  at the time of the first election.
-  
-  
-  <LI><A href="electionrules.html">Election rules and procedures</A>
-  
-  </UL>
+
 
 
     <!-- Start of Boilerplate -->
